--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y <your-dependencies>
+          sudo apt install -y libgtk-3-dev libwebkit2gtk-4.0-dev
       - name: Run tests
         run: CI_RUN='true' bundle exec rake test
       - name: Upload test-fail logs
